--- a/index.html
+++ b/index.html
@@ -925,32 +925,37 @@
                         <div class="video-container">
                             <div class="video-slide active">
                                 <video muted preload="none">
-                                    <source src="static/videos/video_demo_web1.mp4" type="video/mp4">
+                                    <source src="static/compare_videos/video_demo_web1.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="video-slide">
                                 <video muted preload="none">
-                                    <source src="static/videos/video_demo_web2.mp4" type="video/mp4">
+                                    <source src="static/compare_videos/video_demo_web2.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="video-slide">
                                 <video muted preload="none">
-                                    <source src="static/videos/video_demo_web3.mp4" type="video/mp4">
+                                    <source src="static/compare_videos/video_demo_web3.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="video-slide">
                                 <video muted preload="none">
-                                    <source src="static/videos/video_demo_web4.mp4" type="video/mp4">
+                                    <source src="static/compare_videos/video_demo_web4.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="video-slide">
                                 <video muted preload="none">
-                                    <source src="static/videos/video_demo_web5.mp4" type="video/mp4">
+                                    <source src="static/compare_videos/video_demo_web5.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="video-slide">
                                 <video muted preload="none">
-                                    <source src="static/videos/video_demo_web6.mp4" type="video/mp4">
+                                    <source src="static/compare_videos/video_demo_web6.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                            <div class="video-slide">
+                                <video muted preload="none">
+                                    <source src="static/compare_videos/video_demo_web7.mp4" type="video/mp4">
                                 </video>
                             </div>
                         </div>
@@ -972,6 +977,7 @@
                         <div class="indicator" onclick="currentSlide(4)"></div>
                         <div class="indicator" onclick="currentSlide(5)"></div>
                         <div class="indicator" onclick="currentSlide(6)"></div>
+                        <div class="indicator" onclick="currentSlide(7)"></div>
                     </div>
                 </div>
             </div>
@@ -1115,10 +1121,10 @@
 
         const videoManager = new VideoLoadManager();
 
-        // 分阶段加载视频
+        // 分阶段加载视频 - 修正后的版本
         async function loadVideosInStages() {
             try {
-                // 第1阶段：加载中心16个视频（最高优先级）
+                // 第1阶段：加载中心16个视频（最高优先级5）
                 videoManager.showLoading('Loading center videos...');
                 const centerVideos = document.querySelectorAll('.center-video video');
                 await Promise.all(Array.from(centerVideos).map(video => 
@@ -1130,11 +1136,11 @@
                     video.play().catch(() => {});
                 });
 
-                // 第2阶段：加载背景视频
+                // 第2阶段：加载背景视频（优先级4）
                 videoManager.updateLoading('Loading background videos...');
                 const backgroundVideos = document.querySelectorAll('.video-cell:not(.center-video) video');
                 await Promise.all(Array.from(backgroundVideos).map((video, index) => 
-                    videoManager.loadVideo(video, 3)
+                    videoManager.loadVideo(video, 4)
                 ));
 
                 // 开始播放背景视频
@@ -1144,14 +1150,14 @@
                     }, index * 100);
                 });
 
-                // 第3阶段：加载轮播视频
+                // 第3阶段：加载轮播视频（优先级3）
                 videoManager.updateLoading('Loading carousel videos...');
                 const carouselVideos = document.querySelectorAll('.video-slide video');
                 await Promise.all(Array.from(carouselVideos).map(video => 
-                    videoManager.loadVideo(video, 4)
+                    videoManager.loadVideo(video, 3)
                 ));
 
-                // 第4阶段：预加载前8个记忆视频
+                // 第4阶段：预加载前8个记忆视频（优先级2）
                 videoManager.updateLoading('Loading memory videos...');
                 generateAllMemoryVideos();
                 hideExtraVideos();
@@ -1165,7 +1171,7 @@
                 videoManager.hideLoading();
                 console.log('All priority videos loaded successfully!');
 
-                // 第5阶段：后台加载剩余记忆视频（低优先级）
+                // 第5阶段：后台加载剩余记忆视频（最低优先级1）
                 setTimeout(() => {
                     const remainingMemoryVideos = document.querySelectorAll('.memory-video-pair:nth-child(n+9) .memory-video');
                     Array.from(remainingMemoryVideos).forEach(video => {
@@ -1213,8 +1219,8 @@
                 currentVideo.playbackRate = 3.0;
                 currentVideo.play().catch(() => {});
             } else {
-                // 如果未加载，先加载再播放
-                videoManager.loadVideo(currentVideo, 4).then(() => {
+                // 如果未加载，先加载再播放（轮播视频优先级3）
+                videoManager.loadVideo(currentVideo, 3).then(() => {
                     currentVideo.playbackRate = 3.0;
                     currentVideo.play().catch(() => {});
                 });
@@ -1348,13 +1354,13 @@
                     }
                 });
 
-                // 加载新显示的视频
+                // 加载新显示的视频（优先级1）
                 const newlyVisibleVideos = document.querySelectorAll('.memory-video-pair:nth-child(n+9) .memory-video');
                 videoManager.showLoading('Loading additional videos...');
                 
                 try {
                     await Promise.all(Array.from(newlyVisibleVideos).map(video => 
-                        videoManager.loadVideo(video, 2)
+                        videoManager.loadVideo(video, 1)
                     ));
                     videoManager.hideLoading();
                 } catch (error) {
@@ -1448,8 +1454,8 @@
                         // 确保视频已加载
                         if (gtVideo.readyState < 2 || outputVideo.readyState < 2) {
                             Promise.all([
-                                videoManager.loadVideo(gtVideo, 3),
-                                videoManager.loadVideo(outputVideo, 3)
+                                videoManager.loadVideo(gtVideo, 2),
+                                videoManager.loadVideo(outputVideo, 2)
                             ]).then(() => {
                                 if (gtVideo.paused) {
                                     syncPlay();
