--- a/index.html
+++ b/index.html
@@ -837,8 +837,8 @@
                 </div>
                 <div class="author-row">
                     <a href="https://shishaoshuai.com/" class="author-link">Shaoshuai Shi<sup>4</sup></a>
-                    <a href="https://faculty.hitsz.edu.cn/zhuotaotian" class="author-link">Zhuotao Tian<sup>5</sup></a>
-                    <a href="https://www.microsoft.com/en-us/research/people/tianyuhe/" class="author-link">Tianyu He<sup>6</sup></a>
+                    <a href="https://faculty.hitsz.edu.cn/zhuotaotian" class="author-link">Zhuotao Tian<sup>2</sup></a>
+                    <a href="https://www.microsoft.com/en-us/research/people/tianyuhe/" class="author-link">Tianyu He<sup>5</sup></a>
                     <a href="https://llijiang.github.io/" class="author-link">Li Jiang<sup>1,2,†</sup></a>
                 </div>
             </div>
@@ -846,11 +846,10 @@
             <!-- Affiliations -->
             <div class="affiliations">
                 <sup>1</sup> The Chinese University of Hong Kong, Shenzhen &nbsp;&nbsp;
-                <sup>2</sup> Shenzhen Loop Area Institute &nbsp;&nbsp;
-                <sup>3</sup> The University of Hong Kong<br>
+                <sup>2</sup> Shenzhen Loop Area Institute <br>
+                <sup>3</sup> The University of Hong Kong &nbsp;&nbsp;
                 <sup>4</sup> Voyager Research, Didi Chuxing &nbsp;&nbsp;
-                <sup>5</sup> Harbin Institute of Technology, Shenzhen &nbsp;&nbsp;
-                <sup>6</sup> Microsoft Research<br>
+                <sup>5</sup> Microsoft Research<br>
                 <sup>†</sup> Corresponding Author
             </div>
 
