--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                 <div class="author-row">
                     <a href="https://junchao-cs.github.io/Junchao_Huang_CV/" class="author-link">Junchao Huang<sup>1,2</sup></a>
                     <a href="https://joyhuyy1412.github.io/" class="author-link">Xinting Hu<sup>3</sup></a>
-                    <a href="#" class="author-link">Boyao Han<sup>1</sup></a>
+                    <a href="https://github.com/h161020716" class="author-link">Boyao Han<sup>1</sup></a>
                 </div>
                 <div class="author-row">
                     <a href="https://shishaoshuai.com/" class="author-link">Shaoshuai Shi<sup>4</sup></a>
