--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
             <!-- Authors -->
             <div class="authors">
                 <div class="author-row">
-                    <a href="https://junchao-cs.github.io/Junchao_Huang_CV/" class="author-link">Junchao Huang<sup>1,2</sup></a>
+                    <a href="https://Junchao-cs.github.io/" class="author-link">Junchao Huang<sup>1,2</sup></a>
                     <a href="https://joyhuyy1412.github.io/" class="author-link">Xinting Hu<sup>3</sup></a>
                     <a href="https://github.com/h161020716" class="author-link">Boyao Han<sup>1</sup></a>
                 </div>
