Modify links and BibTeX citation in index.html
Updated links and citation information for the paper.

--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
 
             <!-- Links -->
             <div class="links">
-                <a href="https://arxiv.org/pdf/2506.10507.pdf" class="link-button">
+                <a href="https://arxiv.org/pdf/2510.03198" class="link-button">
                     <i class="fas fa-file-pdf"></i>
                     Paper
                 </a>
@@ -863,7 +863,7 @@
                     <i class="fab fa-github"></i>
                     Code
                 </a>
-                <a href="https://arxiv.org/abs/2506.10507" class="link-button">
+                <a href="https://arxiv.org/abs/2510.03198" class="link-button">
                     <i class="ai ai-arxiv"></i>
                     arXiv
                 </a>
@@ -1015,11 +1015,15 @@
     <section class="citation-section">
         <div class="container">
             <h2 class="section-title">BibTeX</h2>
-            <div class="citation-code">@article{huang2025memoryforcing,
-      title={Memory Forcing: Spatio-Temporal Memory for Consistent Scene Generation on Minecraft},
-      author={Huang, Junchao and Hu, Xinting and Han, Boyao and Shi, Shaoshuai and Tian, Zhuotao and He, Tianyu and Jiang, Li},
-      journal={arXiv preprint arXiv},
-      year={2025}
+            <div class="citation-code">@misc{huang2025memoryforcingspatiotemporalmemory,
+      title={Memory Forcing: Spatio-Temporal Memory for Consistent Scene Generation on Minecraft}, 
+      author={Junchao Huang and Xinting Hu and Boyao Han and Shaoshuai Shi and Zhuotao Tian and Tianyu He and Li Jiang},
+      year={2025},
+      eprint={2510.03198},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2510.03198}, 
+}
     }</div>
         </div>
     </section>
