--- a/index.html
+++ b/index.html
@@ -903,6 +903,7 @@
             <h3 style="font-family: 'Orbitron', sans-serif; font-size: 1.8rem; font-weight: 600; color: #ffffff; margin-bottom: 2rem; text-align: center;">
                 Long-term Spatial Memory Comparison
             </h3>
+            <p class="video-note">(Video resolution has been compressed for optimized web loading)</p>
             
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; margin-bottom: 2rem;">
                 <!-- Left Side: w/o long-term spatial memory -->
@@ -963,6 +964,7 @@
             <h3 style="font-family: 'Orbitron', sans-serif; font-size: 1.8rem; font-weight: 600; color: #ffffff; margin-bottom: 2rem; text-align: center;">
                 Spatio-Temporal Memory Balance Comparison
             </h3>
+            <p class="video-note">(Video resolution has been compressed for optimized web loading)</p>
             
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; margin-bottom: 2rem;">
                 <!-- Left Side: Over-reliance on Spatial Memory -->
