--- a/index.html
+++ b/index.html
@@ -1037,6 +1037,7 @@
     <section class="content-section">
         <div class="container">
             <h2 class="section-title">Qualitative Comparison</h2>
+            <p class="video-note">(Video resolution has been compressed for optimized web loading)</p>
             
             <!-- Comparison Video Carousel -->
             <div class="comparison-section">
