--- a/index.html
+++ b/index.html
@@ -323,6 +323,16 @@
             margin-bottom: 2rem;
             letter-spacing: 0.02em;
         }
+
+        .video-note {
+            font-size: 0.85rem;
+            color: #999999;
+            font-style: italic;
+            margin-top: 0.3rem;
+            margin-bottom: 1.5rem;
+            font-weight: 300;
+            text-align: center;
+        }
         
         .video-carousel-wrapper {
             position: relative;
